--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,6 +1,10 @@
+<h1>Galleries</h1>
+
 <%= link_to "New Gallery", "/galleries/new" %>
 
 <% @galleries.each do |gallery| %>
-  <%= link_to gallery.name, "galleries/#{gallery.id}" %>
+  <div>
+    <%= link_to gallery.name, "galleries/#{gallery.id}" %>
+  </div>
 <% end %>
 
