--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -14,3 +14,7 @@
   <%= form.label :url %>
   <%= form.text_field :url %>
 </div>
+
+<div>
+  <%= form.collection_check_boxes :group_ids, current_user.groups, :id, :name %>
+</div>
