--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,4 +1,4 @@
 <%= link_to [image.gallery, image] do %>
-  <%= image_tag image.url, width: 200 -%>
+  <%= image_tag image.url, width: 350 %>
 <% end %>
 
