--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Pixtr</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<div>
-  <%= link_to "Sign Up", new_user_path %>
-  <%= link_to "Sign In", new_session_path %>
-</div>
+  <head>
+    <title>Pixtr</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
 
-<%= yield %>
+    <% if signed_in? %>
+      Welcome <%= current_user.email %>
+      <%= link_to "Sign Out", session_path, method: :delete %>
+    <% else %>
+    
+    <%= link_to "Sign Up", new_user_path %>
+    <%= link_to "Sign In", new_session_path %>
+    <% end %>
 
-</body>
+
+    <% flash.each do |key, value| %>
+      <p class="<%= key %><%= value %></p>
+    <% end %>
+
+    <%= yield %>
+
+  </body>
 </html>
